<resources>
    <string name="app_name">Submission1BAJPDicoding</string>
    <string name="dummy_splashscreen_text">ini splashcreen</string>
    <string name="poster">tempat deskripsi poster</string>
    <string name="text_title">Ini Judul</string>
    <string name="text_release">tanggal rilis</string>
    <string name="text_duration">durasi</string>
    <string name="text_genre">genre</string>
    <string name="text_score">score</string>
    <string name="overview">Overview</string>
    <string name="text_overview">ini overview</string>
    <string name="text_tv_show">TV Shows</string>
    <string name="text_movie">Movies</string>
</resources>