<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:elevation="4dp"
    app:cardCornerRadius="8dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:backgroundTint="@color/dark_blue">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="80dp"
            android:layout_height="120dp"
            android:layout_margin="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:srcCompat="@drawable/poster_naruto_shipudden"
            android:contentDescription="@string/poster" />

        <TextView
            android:id="@+id/item_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textAlignment="center"
            android:fontFamily="@font/poppins_bold"
            app:layout_constraintTop_toTopOf="@id/item_image"
            app:layout_constraintStart_toEndOf="@id/item_image"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/text_title" />

        <TextView
            android:id="@+id/item_genre"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:textSize="12sp"
            android:textAlignment="center"
            android:fontFamily="@font/poppins_bold"
            app:layout_constraintTop_toBottomOf="@id/item_title"
            app:layout_constraintStart_toEndOf="@id/item_image"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/text_genre"
            tools:textColor="@color/black"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>