<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.DetailsActivity">
    
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/AppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AppCompat.NoActionBar"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/dark_blue"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/dark_blue">

                <ImageView
                    android:id="@+id/poster_big_placeholder"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:contentDescription="@string/poster"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteY="-2dp"
                    tools:srcCompat="@drawable/dummy_poster" />

                <ImageView
                    android:id="@+id/poster_small_placeholder"
                    android:layout_width="150dp"
                    android:layout_height="225dp"
                    android:contentDescription="@string/poster"
                    tools:srcCompat="@drawable/dummy_poster"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="100dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
            
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/dark_blue"
                app:popupTheme="@style/Theme.AppCompat.NoActionBar"
                app:titleTextColor="@color/white"
                app:layout_collapseMode="pin"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:background="@color/dark_blue"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp">
            
            <androidx.cardview.widget.CardView
                android:id="@+id/poster_cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:background="@color/dark_blue">

                <TextView
                    android:id="@+id/cv_tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:textAlignment="center"
                    android:textSize="22sp"
                    android:background="@color/dark_blue"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/poppins_bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/text_title"/>

                    <View
                        android:id="@+id/views"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/dark_blue"
                        app:layout_constraintTop_toBottomOf="@id/cv_tv_title"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <TextView
                        android:id="@+id/cv_tv_release"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:textSize="14sp"
                        android:textColor="@android:color/white"
                        android:fontFamily="serif-monospace"
                        app:drawableStartCompat="@drawable/ic_date"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/cv_tv_title"
                        tools:text="@string/text_release" />

                    <TextView
                        android:id="@+id/cv_tv_duration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:textSize="14sp"
                        android:textColor="@android:color/white"
                        android:fontFamily="serif-monospace"
                        app:drawableStartCompat="@drawable/ic_time"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/cv_tv_release"
                        tools:text="@string/text_duration"/>

                    <TextView
                    android:id="@+id/cv_tv_genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:textSize="14sp"
                    android:textColor="@android:color/white"
                    android:fontFamily="serif-monospace"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cv_tv_duration"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:drawableStartCompat="@drawable/ic_movie"
                    tools:text="@string/text_genre"/>

                    <androidx.cardview.widget.CardView
                        android:layout_width="84dp"
                        android:layout_height="84dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:elevation="4dp"
                        app:cardCornerRadius="42dp"
                        app:cardBackgroundColor="@color/teal_200"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/cv_tv_genre"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent">

                        <TextView
                            android:id="@+id/cv_tv_score"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="@android:color/white"
                            android:fontFamily="@font/mohave"
                            android:gravity="center"
                            android:textSize="18sp"
                            tools:text="@string/text_score"/>
                    </androidx.cardview.widget.CardView>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:background="@color/teal_200"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="6dp"
                app:cardElevation="4dp"
                app:layout_constraintTop_toBottomOf="@id/poster_cardView">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:background="@color/dark_blue">

                    <TextView
                        android:id="@+id/title_overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:textSize="20sp"
                        android:text="@string/overview"
                        android:textColor="@android:color/white"
                        android:textAlignment="center"
                        android:fontFamily="@font/mohave"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <View
                        android:id="@+id/views2"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/dark_blue"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/title_overview"/>

                    <TextView
                        android:id="@+id/isi_overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textSize="14sp"
                        android:textColor="@color/white"
                        android:fontFamily="serif-monospace"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/views2"
                        tools:text="@string/text_overview"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>